// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Container should correctly render amp navigation 1`] = `
.emotion-115 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-115.si-nav-open {
    background-color: #222222;
  }
}

.emotion-115 .emotion-67::after {
  left: 0;
}

.emotion-113 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-0 {
  color: #fff;
  fill: currentColor;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-58 {
  background-color: #222222;
  clear: both;
}

@media (min-width:37.5rem) {
  .emotion-58 {
    display: none;
    visibility: hidden;
  }
}

.emotion-56 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-14 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-14:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-12:hover,
.emotion-12:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

@media (max-width:37.4375rem) {
  .emotion-111 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-111::-webkit-scrollbar {
    display: none;
  }

  .emotion-111:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

@media (min-width:25rem) {
    .emotion-111:after {
      width: 6rem;
    }
}
}

@media (max-width:37.4375rem) {
  .emotion-111.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-108 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-108 {
    overflow: hidden;
  }
}

.emotion-66 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-66:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-66::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-64 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-64 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-64 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-64 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-64:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-64:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-62::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-68 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-68 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-68 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-68 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-68:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-68:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

<div>
  <nav
    class="emotion-115 emotion-116"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-113 emotion-114"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-6 emotion-7"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-4 emotion-5"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-58 emotion-59"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-56 emotion-57"
          role="list"
        >
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news"
            >
              <span
                class="emotion-10 emotion-11"
                dir="ltr"
                role="text"
              >
                <span
                  class="emotion-4 emotion-5"
                >
                  Current page
                  , 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-14 emotion-15"
            role="listitem"
          >
            <a
              class="emotion-12 emotion-13"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-110 emotion-111 emotion-112"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-108 emotion-109"
          role="list"
        >
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news"
            >
              <span
                class="emotion-62 emotion-63"
                role="text"
              >
                <span
                  class="emotion-4 emotion-5"
                >
                  Current page
                  , 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-65"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render amp navigation on non-home navigation page 1`] = `
.emotion-107 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-107.si-nav-open {
    background-color: #222222;
  }
}

.emotion-107 .emotion-59::after {
  left: 0;
}

.emotion-105 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-0 {
  color: #fff;
  fill: currentColor;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-54 {
  background-color: #222222;
  clear: both;
}

@media (min-width:37.5rem) {
  .emotion-54 {
    display: none;
    visibility: hidden;
  }
}

.emotion-52 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-10 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-10:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width:37.4375rem) {
  .emotion-103 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-103::-webkit-scrollbar {
    display: none;
  }

  .emotion-103:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

@media (min-width:25rem) {
    .emotion-103:after {
      width: 6rem;
    }
}
}

@media (max-width:37.4375rem) {
  .emotion-103.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-100 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-100 {
    overflow: hidden;
  }
}

.emotion-58 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-58:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-58::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-56 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-56 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-56:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-56:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

<div>
  <nav
    class="emotion-107 emotion-108"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-105 emotion-106"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-6 emotion-7"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-4 emotion-5"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-54 emotion-55"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-52 emotion-53"
          role="list"
        >
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-102 emotion-103 emotion-104"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-100 emotion-101"
          role="list"
        >
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render amp navigation on non-navigation page 1`] = `
.emotion-107 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-107.si-nav-open {
    background-color: #222222;
  }
}

.emotion-107 .emotion-59::after {
  left: 0;
}

.emotion-105 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-0 {
  color: #fff;
  fill: currentColor;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-54 {
  background-color: #222222;
  clear: both;
}

@media (min-width:37.5rem) {
  .emotion-54 {
    display: none;
    visibility: hidden;
  }
}

.emotion-52 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-10 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-10:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width:37.4375rem) {
  .emotion-103 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-103::-webkit-scrollbar {
    display: none;
  }

  .emotion-103:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

@media (min-width:25rem) {
    .emotion-103:after {
      width: 6rem;
    }
}
}

@media (max-width:37.4375rem) {
  .emotion-103.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-100 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-100 {
    overflow: hidden;
  }
}

.emotion-58 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-58:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-58::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-56 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-56 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-56:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-56:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

<div>
  <nav
    class="emotion-107 emotion-108"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-105 emotion-106"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-6 emotion-7"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-4 emotion-5"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-54 emotion-55"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-52 emotion-53"
          role="list"
        >
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-10 emotion-11"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-9"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-102 emotion-103 emotion-104"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-100 emotion-101"
          role="list"
        >
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation 1`] = `
.emotion-112 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-0 {
  color: #fff;
  fill: currentColor;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-108 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-66 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-66:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-64 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-64 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-64 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-64:hover,
.emotion-64:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-62 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

.emotion-54 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-54 {
    overflow: hidden;
  }
}

.emotion-12 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-12:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-10 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-10:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-10:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-8::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-14 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-14:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-14:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-114 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-114 .emotion-13::after {
  left: 0;
}

.emotion-58 {
  position: relative;
}

@media (max-width:37.4375rem) {
  .emotion-56 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-56::-webkit-scrollbar {
    display: none;
  }

  .emotion-56:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

@media (min-width:25rem) {
    .emotion-56:after {
      width: 6rem;
    }
}
}

.emotion-110 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.58,1);
  transition-timing-function: cubic-bezier(0,0,0.58,1);
  visibility: hidden;
}

@media (min-width:37.5rem) {
  .emotion-110 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion:reduce) {
  .emotion-110 {
    -webkit-transition: none;
    transition: none;
  }
}

<div>
  <nav
    class="emotion-114 emotion-115"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-112 emotion-113"
    >
      <div
        class="emotion-58 emotion-59"
      >
        <button
          aria-expanded="false"
          class="emotion-4 emotion-5"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-2 emotion-3"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-56 emotion-57"
          dir="ltr"
        >
          <ul
            class="emotion-54 emotion-55"
            role="list"
          >
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-10 emotion-11"
                href="/news"
              >
                <span
                  class="emotion-8 emotion-9"
                  role="text"
                >
                  <span
                    class="emotion-2 emotion-3"
                  >
                    Current page
                    , 
                  </span>
                  Home
                </span>
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-12 emotion-13"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-14 emotion-11"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-110 emotion-111"
        height="0"
      >
        <ul
          class="emotion-108 emotion-109"
          role="list"
        >
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news"
            >
              <span
                class="emotion-62 emotion-63"
                dir="ltr"
                role="text"
              >
                <span
                  class="emotion-2 emotion-3"
                >
                  Current page
                  , 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            role="listitem"
          >
            <a
              class="emotion-64 emotion-65"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation on non-home navigation page 1`] = `
.emotion-104 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-0 {
  color: #fff;
  fill: currentColor;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-100 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-58 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-58:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-56 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-56:hover,
.emotion-56:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-50 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-50 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-8:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-6:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-106 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-106 .emotion-9::after {
  left: 0;
}

.emotion-54 {
  position: relative;
}

@media (max-width:37.4375rem) {
  .emotion-52 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-52::-webkit-scrollbar {
    display: none;
  }

  .emotion-52:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

@media (min-width:25rem) {
    .emotion-52:after {
      width: 6rem;
    }
}
}

.emotion-102 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.58,1);
  transition-timing-function: cubic-bezier(0,0,0.58,1);
  visibility: hidden;
}

@media (min-width:37.5rem) {
  .emotion-102 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion:reduce) {
  .emotion-102 {
    -webkit-transition: none;
    transition: none;
  }
}

<div>
  <nav
    class="emotion-106 emotion-107"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-104 emotion-105"
    >
      <div
        class="emotion-54 emotion-55"
      >
        <button
          aria-expanded="false"
          class="emotion-4 emotion-5"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-2 emotion-3"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-52 emotion-53"
          dir="ltr"
        >
          <ul
            class="emotion-50 emotion-51"
            role="list"
          >
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news"
              >
                Home
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-102 emotion-103"
        height="0"
      >
        <ul
          class="emotion-100 emotion-101"
          role="list"
        >
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation on non-navigation page 1`] = `
.emotion-104 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-0 {
  color: #fff;
  fill: currentColor;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-100 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-58 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-58:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-56 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-56 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-56:hover,
.emotion-56:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-50 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-50 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-8:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-6:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-106 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-106 .emotion-9::after {
  left: 0;
}

.emotion-54 {
  position: relative;
}

@media (max-width:37.4375rem) {
  .emotion-52 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-52::-webkit-scrollbar {
    display: none;
  }

  .emotion-52:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

@media (min-width:25rem) {
    .emotion-52:after {
      width: 6rem;
    }
}
}

.emotion-102 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.58,1);
  transition-timing-function: cubic-bezier(0,0,0.58,1);
  visibility: hidden;
}

@media (min-width:37.5rem) {
  .emotion-102 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion:reduce) {
  .emotion-102 {
    -webkit-transition: none;
    transition: none;
  }
}

<div>
  <nav
    class="emotion-106 emotion-107"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-104 emotion-105"
    >
      <div
        class="emotion-54 emotion-55"
      >
        <button
          aria-expanded="false"
          class="emotion-4 emotion-5"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-2 emotion-3"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-52 emotion-53"
          dir="ltr"
        >
          <ul
            class="emotion-50 emotion-51"
            role="list"
          >
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news"
              >
                Home
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-8 emotion-9"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-6 emotion-7"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-102 emotion-103"
        height="0"
      >
        <ul
          class="emotion-100 emotion-101"
          role="list"
        >
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-58 emotion-59"
            role="listitem"
          >
            <a
              class="emotion-56 emotion-57"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
